--- a/code_challenge/final_code.html
+++ b/code_challenge/final_code.html
@@ -63,6 +63,21 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<section id="randys-comments" class="level2">
+<h2 class="anchored" data-anchor-id="randys-comments">Randy’s comments</h2>
+<ul>
+<li>Nice!</li>
+<li>I am not sure it is necessary to convert input data to dataframe-double check this by exploring the inputs after you load</li>
+<li>with this challenge typing out specific code like you did for the unlist was not a big deal, but could be with other datasets. Consider using a loop or a function in the future, or a different approach altogether. I did not test, but I also think this would work and be more concise:</li>
+</ul>
+<p>past_percentages &lt;- unname(unlist(past_df[c(1, 3, 2), ]))</p>
+<ul>
+<li>did you print just to explore?</li>
+<li>As I read your code I love it. I am noticing that your method is fairly manual, e.g., finding the value for each ecosystem, and think this probably gave you a chance to really learn what is going on. In the future I would encourage you to think through how to do this with fewer manual steps</li>
+<li>increadible notes and reflections.</li>
+</ul>
+<p>** Well done Jaxson!</p>
+</section>
 <section id="past-data" class="level2">
 <h2 class="anchored" data-anchor-id="past-data">Past Data</h2>
 <p>Past for Dry-Mesic</p>
